src/test/deca/syntax/valid/created/sans_objet/binary_expr/op_arithm.deca
// Règles attendues (occurences dans lignes du fichier résultat):
// Program 33:0
//     ListDeclClass
//     Main 33:0
//         ListDeclVar
//             DeclVar 34:8
//                 Identifier 34:4 
//                 Identifier 34:8 
//                 Initialization 34:12
//                     Int 34:12 
//             DeclVar 35:8
//                 Identifier 35:4 
//                 Identifier 35:8 
//                 Initialization 35:12
//                     Int 35:12 
//             DeclVar 36:8
//                 Identifier 36:4 
//                 Identifier 36:8 
//                 Initialization 36:12
//                         Plus 36:14
//                         Identifier 36:12 
//                         Identifier 36:16
//              ListInst 
//
// Auteur: Jerome
//
// Historique:
//    cree le 14/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

{
    int a = 5;
    int b = 3;
    int c = a + b;
}
